Add iframe pages

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,1 +1,4 @@
-aRlN8iv8MeHFbrNPvlD96Q==|Qi/tVBBIk75zsrmRTs6yd20JfuOZyfSXwAuQNqoQgARodIySMMTVPoXGsS7VLeF7scF6SPT7Y72ys+c71rxQZscgTFTknFIOIw2vtqOlihEsBE6sWJlZqHWtJz/Yt9aLxGoM414biQ==
+html {
+  background-color: #080;
+  width: 100%;
+}/*# sourceMappingURL=footer.css.map */
