--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,1 +1,4 @@
-SPi5PZ+pPT5V4kG0jaQLJQ==|bTyU9KBBxBjbx6drdScYppc0ngDpsOm5T2/OnZJOilwAZZpXxPoqhnys579nTL3VydZ62BHgLXsjlvAB2gNtntBWpkNXgg==
+html {
+  background-color: #080;
+  width: 100%;
+}
