--- a/css/global.scss
+++ b/css/global.scss
@@ -1,1 +1,5 @@
-rOfZ0QsfYHUygzI47Slufw==|KvWvk70TKjsk8sVGuDY1uNw5LEXqcU/4eKrlEnrPdmEmVsDNXjOcQbn1sVANpHPvz1Rte9Y2kIo+Hqe3IcSe
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
