--- a/css/header.scss
+++ b/css/header.scss
@@ -1,1 +1,4 @@
-Y8/tBa2nVEQxAlCasF7rpA==|xkAVngpDLeW/2fPsm6UQA9PtBN4ruz6vE7wp1eaOGa7KLGktK0o49cIaFeeqsbfTdsSA250KX6mEnkEq9dd9yyoC1MgaTw==
+html {
+  background-color: #080;
+  width: 100%;
+}
