--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,5 @@
-ThV3woldFC6JTzjUJcRmvQ==|gBmpfpfE/sOICoteZ72MsubIgAUUR5dHimQo5PtDaD24LTwruj+NwT5BL/SXMukZFWtDqFPWVFJ7N3M2NuHDAjKxAIdsGpzbGdjuFrQxUJZRewYRD23M1tTh2Hxvtm65n405oMezhySfEFtlhbkharMQzsi+
+html {
+  height: 100%;
+  width: 100%;
+  background-color: aqua;
+}/*# sourceMappingURL=main.css.map */
