--- a/css/main.scss
+++ b/css/main.scss
@@ -1,1 +1,5 @@
-73haZV/D04O30CC0NC+Pvg==|p+KoOtL3ZXuPhTn7tLYG0DU/hcTSjjqOAb0pWLj/u1v3Ftj8AhJg42ajpTZ9TziC1DrQTwxdZpyLkBl0z3igQ15NtmPN/oAg+qauAOx52fSOr82AseOL
+html {
+  height: 100%;
+  width: 100%;
+  background-color: aqua;
+}
