--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,5 @@
-cM0lem2B6Aq4Hrm7AWUlHg==|6yRAlgUudNwbngk0/c8G/x4aNiU0t/3d5K8yJzitDi6EEbWwjNuA4YGeUUD+186eEObKXSsyF2cPeTS33bWmgSWnSqLe3yqp9u8mpkK3WFSzlPyNBJ8SzODXkI46JnI=
+html,
+body {
+  margin: 0;
+  padding: 0;
+}/*# sourceMappingURL=global.css.map */
