--- a/css/header.css
+++ b/css/header.css
@@ -1,1 +1,4 @@
-xeC725OdHEwBOjZysHchAQ==|UaspFr0jc/wY0iw5tjrYRnY+eruNFdU78pULSDF/woyVQfDzJTCqhAiCqyGdlhUZYN8xM2IjY59XFKeREA87j1iCJeTLlf3vWAsSlOYHxZ0pHItDnWVGqlIVCZBmoXRC7jRYLcvheA==
+html {
+  background-color: #080;
+  width: 100%;
+}/*# sourceMappingURL=header.css.map */
