--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: aqua;
+  background-color: green;
+}
+
+.card {
+  width: 100%;
+}
+.card__image {
+  border-radius: 25px;
 }/*# sourceMappingURL=main.css.map */
