--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,14 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: aqua;
+  background-color: green;
+}
+ 
+
+.card {
+  width: 100%;
+
+  &__image {
+  border-radius: 25px;
+  }
 }
