--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,19 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: green;
+  background-color: white;
 }
- 
 
 .card {
   width: 100%;
 
   &__image {
-  border-radius: 25px;
+    border-radius: 25px;
   }
+}
+
+.sport-section {
+}
+
+.country-section {
 }
