--- a/css/main.scss
+++ b/css/main.scss
@@ -4,16 +4,43 @@ html {
   background-color: white;
 }
 
-.card {
-  width: 100%;
 
-  &__image {
-    border-radius: 25px;
-  }
-}
 
 .sport-section {
+
+  h2 {
+    text-align: center;
+  }
+
+
 }
 
 .country-section {
+
+  margin: 1rem;
+  
+  
+
+  &__title{
+    background-color: #1C1D1D;
+    color: white;
+    border-radius: 4px 4px 0px 0px;
+    padding: 0.5rem;
+    margin: 5px;
+  }
+
+  &__item{
+    display: flex;
+    align-items: center;
+    color: #161615;
+    border-bottom: 1px solid #EFF0F0;
+    padding: 10px 34.3px;
+
+
+    img{
+      max-width: 30px;
+      padding-right: 26.3px;
+    }
+  }
+   
 }
