--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,4 +1,15 @@
 html {
-  background-color: #080;
+  background: transparent
+    linear-gradient(
+      109deg,
+      #b90a1b 0%,
+      #c90015 23%,
+      #be0013 63%,
+      #d40a20 63%,
+      #9c0110 100%
+    )
+    0% 0% no-repeat padding-box;
+  opacity: 1;
   width: 100%;
+  height: 100px;
 }
