--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: white;
+  background-color: #eff0f0;
 }
 
 .sport-section h2 {
@@ -10,22 +10,27 @@ html {
 
 .country-section {
   margin: 1rem;
+  box-shadow: rgba(28, 29, 29, 0.08) 0 0.75em 1.5em;
+  max-width: 932px;
+  margin: auto;
 }
 .country-section__title {
-  background-color: #1C1D1D;
+  background-color: #1c1d1d;
   color: white;
   border-radius: 4px 4px 0px 0px;
   padding: 0.5rem;
-  margin: 5px;
+  margin: 0px;
 }
 .country-section__item {
   display: flex;
   align-items: center;
   color: #161615;
-  border-bottom: 1px solid #EFF0F0;
-  padding: 10px 34.3px;
+  border-bottom: 1px solid #eff0f0;
+  padding: 10px 15px;
+  font-weight: bold;
+  background-color: #fff;
 }
 .country-section__item img {
-  max-width: 30px;
+  width: 50px;
   padding-right: 26.3px;
 }/*# sourceMappingURL=main.css.map */
