--- a/css/main.scss
+++ b/css/main.scss
@@ -1,46 +1,41 @@
 html {
   height: 100%;
   width: 100%;
-  background-color: white;
+  background-color: #eff0f0;
 }
 
-
-
 .sport-section {
-
   h2 {
     text-align: center;
   }
-
-
 }
 
 .country-section {
-
   margin: 1rem;
-  
-  
+  box-shadow: rgb(28 29 29 / 8%) 0 0.75em 1.5em;
+  max-width: 932px;
+  margin: auto;
 
-  &__title{
-    background-color: #1C1D1D;
+  &__title {
+    background-color: #1c1d1d;
     color: white;
     border-radius: 4px 4px 0px 0px;
     padding: 0.5rem;
-    margin: 5px;
+    margin: 0px;
   }
 
-  &__item{
+  &__item {
     display: flex;
     align-items: center;
     color: #161615;
-    border-bottom: 1px solid #EFF0F0;
-    padding: 10px 34.3px;
+    border-bottom: 1px solid #eff0f0;
+    padding: 10px 15px;
+    font-weight: bold;
+    background-color: #fff;
 
-
-    img{
-      max-width: 30px;
+    img {
+      width: 50px;
       padding-right: 26.3px;
     }
   }
-   
 }
