Add country-section__item width

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ a {
   background-color: #fff;
   display: flex;
   width: 466px;
+  width: 100%;
   border: solid;
 }
 .country-section__item:hover {
