--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,12 @@ a {
 
 .country-section {
   margin: 1rem;
-  box-shadow: rgba(28, 29, 29, 0.08) 0 0.75em 1.5em;
   max-width: 932px;
   margin: auto;
-  padding: 1rem;
+}
+.country-section__padding {
+  margin: 1rem;
+  box-shadow: rgba(28, 29, 29, 0.08) 0 0.75em 1.5em;
 }
 .country-section__box {
   display: flex;
@@ -37,13 +39,13 @@ a {
   align-items: center;
   color: #161615;
   border-bottom: 1px solid #eff0f0;
-  padding: 10px 15px;
   font-weight: bold;
   background-color: #fff;
   display: flex;
-  width: 466px;
   width: 100%;
-  border: solid;
+}
+.country-section__item:last-child:nth-child(odd) {
+  width: 100%;
 }
 .country-section__item:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -51,4 +53,10 @@ a {
 .country-section__item img {
   width: 50px;
   padding-right: 26.3px;
+}
+
+@media only screen and (min-width: 600px) {
+  .country-section__item {
+    width: 50%;
+  }
 }/*# sourceMappingURL=main.css.map */
