--- a/css/page2.css
+++ b/css/page2.css
@@ -19,6 +19,10 @@ a {
   text-align: center;
 }
 
+.round {
+  border-radius: 4px;
+}
+
 .breadcrumbs {
   display: flex;
   padding: 2px;
@@ -34,6 +38,7 @@ a {
   display: flex;
   font-size: 13px;
   align-items: center;
+  flex-direction: column;
 }
 .match-picker__title {
   background-color: #111215;
@@ -55,9 +60,74 @@ a {
 .match-picker__item {
   border-radius: 4px;
   background-color: #ffffff;
-  width: 200px;
+  width: 300px;
   height: 67px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.arrow {
+  display: none;
+}
+
+.league__titlebox {
+  overflow: clip;
+}
+.league__title {
+  background: transparent linear-gradient(104deg, #292a2a 0%, #000000 50%, #292a2a 50%, #111215 100%) 0% 0% no-repeat padding-box;
+  color: white;
+  padding: 5px 0 20px 0;
+}
+.league__menu {
+  background: #1c1d1d 0% 0% no-repeat padding-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.league__menu a {
+  color: white;
+}
+.league__menu img {
+  width: 20px;
+  padding: 6px 26px 6px 30px;
+}
+.league__menuitem {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  padding: 4px;
+}
+.league__item {
+  color: black;
+  display: flex;
+  justify-content: space-between;
+}
+.league__itemhome {
+  display: flex;
+  flex-direction: column;
+}
+.league__itemaway {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.league__item img {
+  width: 30px;
+}
+
+@media only screen and (min-width: 600px) {
+  .arrow {
+    display: block;
+  }
+  .match-picker {
+    flex-direction: row;
+    width: 200px;
+  }
+  .league__menu {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .league__menuitem {
+    flex-direction: row;
+  }
 }/*# sourceMappingURL=page2.css.map */
