--- a/css/page2.scss
+++ b/css/page2.scss
@@ -19,6 +19,10 @@ a {
   text-align: center;
 }
 
+.round {
+  border-radius: 4px;
+}
+
 .breadcrumbs {
   display: flex;
   padding: 2px;
@@ -36,9 +40,11 @@ a {
   display: flex;
   font-size: 13px;
   align-items: center;
+  flex-direction: column;
 
   &__title {
     background-color: #111215;
+
     color: #ffffff;
     border-radius: 4px;
     // padding: 15px 0;
@@ -60,11 +66,102 @@ a {
   &__item {
     border-radius: 4px;
     background-color: #ffffff;
-    width: 200px;
+    width: 300px;
     height: 67px;
     // padding: 15px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+
+.arrow {
+  display: none;
+}
+
+.league {
+  &__titlebox {
+    overflow: clip;
+  }
+
+  &__title {
+    background: transparent
+      linear-gradient(
+        104deg,
+        #292a2a 0%,
+        #000000 50%,
+        #292a2a 50%,
+        #111215 100%
+      )
+      0% 0% no-repeat padding-box;
+    color: white;
+    padding: 5px 0 20px 0;
+  }
+
+  &__menu {
+    background: #1c1d1d 0% 0% no-repeat padding-box;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+
+    a {
+      color: white;
+    }
+
+    img {
+      width: 20px;
+      padding: 6px 26px 6px 30px;
+    }
+
+    &item {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      padding: 4px;
+    }
+  }
+
+  &__item {
+    color: black;
+    display: flex;
+    // align-content: space-between;
+    // align-items: space-between;
+    // justify-items: space-between;
+    justify-content: space-between;
+
+    &home {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &away {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    img {
+      width: 30px;
+    }
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .arrow {
+    display: block;
+  }
+
+  .match-picker {
+    flex-direction: row;
+    width: 200px;
+  }
+
+  .league__menu {
+    flex-direction: row;
+    justify-content: space-around;
+
+    &item {
+      flex-direction: row;
+    }
   }
 }
