--- a/css/page2.css
+++ b/css/page2.css
@@ -1,5 +1,25 @@
 body {
   background-color: #eff0f0;
+  overflow-x: clip;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #BDCAC0;
+  border-radius: 8px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #BDCAC0;
 }
 
 .country-section {
@@ -23,6 +43,10 @@ a {
   border-radius: 4px;
 }
 
+.shadow {
+  box-shadow: rgba(28, 29, 29, 0.08) 0 0.75em 1.5em;
+}
+
 .breadcrumbs {
   display: flex;
   padding: 2px;
@@ -44,7 +68,7 @@ a {
   background-color: #111215;
   color: #ffffff;
   border-radius: 4px;
-  width: 300px;
+  width: 100%;
   height: 67px;
   display: flex;
   align-items: center;
@@ -52,6 +76,10 @@ a {
   flex-direction: column;
 }
 .match-picker__options {
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  scrollbar-width: thin;
   display: flex;
 }
 .match-picker__options * {
@@ -101,18 +129,63 @@ a {
 .league__item {
   color: black;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  background-color: white;
+  overflow: hidden;
+  margin: 12px 0;
+  padding: 15px;
 }
 .league__itemhome {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .league__itemaway {
   display: flex;
   flex-direction: column-reverse;
+  align-items: center;
 }
 .league__item img {
   width: 30px;
+}
+.league__item--red {
+  color: red;
+}
+.league__item--redlive {
+  color: white;
+  -webkit-box-ordinal-group: 3;
+  -ms-flex-order: 2;
+  margin-right: 4px;
+  order: 2;
+  position: relative;
+  top: 0;
+}
+.league__item--redlive::after {
+  background: red;
+  border-radius: 4px;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 21px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: skewX(-8deg);
+  transform-origin: bottom right;
+  width: 100%;
+  align-items: center;
+  color: #fff;
+  display: flex;
+  font-size: 13px;
+  font-style: italic;
+  font-weight: 700;
+  line-height: 21px;
+  padding: 0 0.75em;
+  text-transform: uppercase;
+}
+.league__item--redbold {
+  font-weight: bold;
+  font-size: 20px;
 }
 
 @media only screen and (min-width: 600px) {
@@ -121,7 +194,13 @@ a {
   }
   .match-picker {
     flex-direction: row;
-    width: 200px;
+  }
+  .match-picker__title {
+    width: 300px;
+  }
+  .match-picker__item {
+    width: 400px !important;
+    background-color: red;
   }
   .league__menu {
     flex-direction: row;
