--- a/css/page2.scss
+++ b/css/page2.scss
@@ -1,7 +1,23 @@
 body {
   background-color: #eff0f0;
+  overflow-x: clip;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #BDCAC0;
+  border-radius: 8px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #BDCAC0;
+}
 .country-section {
   margin: 1rem;
   box-shadow: rgb(28 29 29 / 8%) 0 0.75em 1.5em;
@@ -21,6 +37,10 @@ a {
 
 .round {
   border-radius: 4px;
+}
+
+.shadow {
+  box-shadow: rgb(28 29 29 / 8%) 0 0.75em 1.5em;
 }
 
 .breadcrumbs {
@@ -44,11 +64,10 @@ a {
 
   &__title {
     background-color: #111215;
-
     color: #ffffff;
     border-radius: 4px;
     // padding: 15px 0;
-    width: 300px;
+    width: 100%;
     height: 67px;
     display: flex;
     align-items: center;
@@ -57,10 +76,18 @@ a {
   }
 
   &__options {
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: scroll;
+
+    scrollbar-width: thin;
     display: flex;
+
+
     * {
       margin: 0.25rem;
     }
+
   }
 
   &__item {
@@ -128,20 +155,78 @@ a {
     // align-content: space-between;
     // align-items: space-between;
     // justify-items: space-between;
-    justify-content: space-between;
+    justify-content: space-around;
+    background-color: white;
+    overflow: hidden;
+    margin: 12px 0;
+    padding: 15px;
+
 
     &home {
       display: flex;
       flex-direction: column;
+      align-items: center;
     }
 
     &away {
       display: flex;
       flex-direction: column-reverse;
+      align-items: center;
     }
 
     img {
       width: 30px;
+    }
+  }
+  &__item--red{
+    color: red;
+    &live{
+      color: white ;
+
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      margin-right: 4px;
+      order: 2;
+      position: relative;
+      top: 0;
+      &::after{
+        background: red;
+        
+        border-radius: 4px;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 21px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        -webkit-transform: skewX(-8deg);
+        transform: skewX(-8deg);
+        -webkit-transform-origin: bottom right;
+        transform-origin: bottom right;
+        width: 100%;
+
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        color: #fff;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        font-size: 13px;
+        font-style: italic;
+        font-weight: 700;
+        line-height: 21px;
+        padding: 0 0.75em;
+        text-transform: uppercase;
+
+      }
+      
+
+    }
+    &bold{
+      font-weight: bold;
+      font-size: 20px;
     }
   }
 }
@@ -153,7 +238,21 @@ a {
 
   .match-picker {
     flex-direction: row;
-    width: 200px;
+    //width: 100%;
+
+    &__title{
+      width: 300px;
+    }
+
+    &__options{
+      //width: 100%;
+
+    }
+    &__item{
+      width: 400px !important;
+      background-color: red;
+    }
+    
   }
 
   .league__menu {
