--- a/css/global.scss
+++ b/css/global.scss
@@ -48,16 +48,21 @@
     url(../fonts/Mont-Trial-HeavyItalic.woff) format('woff');
 }
 
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
 h2 {
   font-style: italic;
   font-weight: 900;
   font-size: 35px;
 }
 
+
 html,
 body {
-  margin: 0;
-  padding: 0;
+  margin: auto;
+  padding: 0 0.5rem ;
   height: 100%;
   width: 100%;
   background-color: #eff0f0;
