--- a/css/page2.css
+++ b/css/page2.css
@@ -23,11 +23,9 @@ body {
 }
 
 .country-section {
-  margin: 1rem;
   box-shadow: rgba(28, 29, 29, 0.08) 0 0.75em 1.5em;
   max-width: 932px;
   margin: auto;
-  padding: 1rem;
 }
 
 a {
@@ -78,7 +76,7 @@ a {
 .match-picker__options {
   width: 100%;
   overflow-y: hidden;
-  overflow-x: scroll;
+  overflow-x: auto;
   scrollbar-width: thin;
   display: flex;
 }
@@ -180,7 +178,6 @@ a {
   font-style: italic;
   font-weight: 700;
   line-height: 21px;
-  padding: 0 0.75em;
   text-transform: uppercase;
 }
 .league__item--redbold {
@@ -200,7 +197,7 @@ a {
   }
   .match-picker__item {
     width: 400px !important;
-    background-color: red;
+    background-color: white;
   }
   .league__menu {
     flex-direction: row;
