--- a/css/page2.css
+++ b/css/page2.css
@@ -12,14 +12,14 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #BDCAC0;
+  background-color: #bdcac0;
   border-radius: 8px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #BDCAC0;
+  background-color: #bdcac0;
 }
 
 .country-section {
@@ -48,6 +48,7 @@ a {
 .breadcrumbs {
   display: flex;
   padding: 2px;
+  color: #909090;
 }
 .breadcrumbs * {
   padding: 5px;
@@ -115,33 +116,46 @@ a {
   color: white;
 }
 .league__menu img {
-  width: 20px;
-  padding: 6px 26px 6px 30px;
+  width: 30px;
+  height: 30px;
 }
 .league__menuitem {
   display: flex;
   align-items: center;
   flex-direction: row;
-  padding: 4px;
+  padding: 5px 30px;
+}
+.league__menuitemtext {
+  padding-left: 10px;
 }
 .league__item {
   color: black;
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-between;
   background-color: white;
   overflow: hidden;
   margin: 12px 0;
-  padding: 15px;
+  padding: 15px 20px 15px 30px;
 }
 .league__itemhome {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 100px;
 }
 .league__itemaway {
   display: flex;
+  align-items: center;
+  max-width: 100px;
+}
+.league__itemawayinner {
+  display: flex;
   flex-direction: column-reverse;
   align-items: center;
+}
+.league__itemaway .arrow {
+  padding-left: 50px;
 }
 .league__item img {
   width: 30px;
@@ -150,7 +164,7 @@ a {
   color: red;
 }
 .league__item--redlive {
-  color: white;
+  z-index: 1;
   -webkit-box-ordinal-group: 3;
   -ms-flex-order: 2;
   margin-right: 4px;
@@ -158,11 +172,11 @@ a {
   position: relative;
   top: 0;
 }
-.league__item--redlive::after {
-  background: red;
+.league__item--redlive::before {
+  background-color: red;
   border-radius: 4px;
   bottom: 0;
-  content: "";
+  content: "Live Now";
   display: block;
   height: 21px;
   position: absolute;
@@ -178,6 +192,7 @@ a {
   font-style: italic;
   font-weight: 700;
   line-height: 21px;
+  padding: 0 0.2rem;
   text-transform: uppercase;
 }
 .league__item--redbold {
@@ -196,7 +211,7 @@ a {
     width: 300px;
   }
   .match-picker__item {
-    width: 400px !important;
+    min-width: 200px;
     background-color: white;
   }
   .league__menu {
@@ -205,5 +220,24 @@ a {
   }
   .league__menuitem {
     flex-direction: row;
+  }
+  .league__item {
+    padding: 15px 20px 15px 50px;
+  }
+  .league__itemhome {
+    max-width: 100%;
+    flex-direction: row;
+  }
+  .league__itemhometext {
+    padding: 10px;
+  }
+  .league__itemaway {
+    max-width: 100%;
+  }
+  .league__itemawayinner {
+    flex-direction: row;
+  }
+  .league__itemawaytext {
+    padding: 10px;
   }
 }/*# sourceMappingURL=page2.css.map */
