--- a/css/page2.scss
+++ b/css/page2.scss
@@ -10,16 +10,15 @@ body {
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #BDCAC0;
+  background-color: #bdcac0;
   border-radius: 8px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #BDCAC0;
+  background-color: #bdcac0;
 }
 .country-section {
-  
   box-shadow: rgb(28 29 29 / 8%) 0 0.75em 1.5em;
   max-width: 932px;
   margin: auto;
@@ -46,6 +45,7 @@ a {
 .breadcrumbs {
   display: flex;
   padding: 2px;
+  color: #909090;
 
   * {
     padding: 5px;
@@ -83,11 +83,9 @@ a {
     scrollbar-width: thin;
     display: flex;
 
-
     * {
       margin: 0.25rem;
     }
-
   }
 
   &__item {
@@ -129,7 +127,6 @@ a {
     background: #1c1d1d 0% 0% no-repeat padding-box;
     display: flex;
     flex-direction: column;
-
     align-items: center;
 
     a {
@@ -137,15 +134,20 @@ a {
     }
 
     img {
-      width: 20px;
-      padding: 6px 26px 6px 30px;
+      width: 30px;
+      height: 30px;
+      //padding: 0 26px 6px 30px;
     }
 
     &item {
       display: flex;
       align-items: center;
       flex-direction: row;
-      padding: 4px;
+      padding: 5px 30px;
+
+      &text {
+        padding-left: 10px;
+      }
     }
   }
 
@@ -153,37 +155,45 @@ a {
     color: black;
     display: flex;
     // align-content: space-between;
-    // align-items: space-between;
+    align-items: center;
     // justify-items: space-between;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: white;
     overflow: hidden;
     margin: 12px 0;
-    padding: 15px;
-
+    padding: 15px 20px 15px 30px;
 
     &home {
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 100px;
     }
 
     &away {
       display: flex;
-      flex-direction: column-reverse;
       align-items: center;
+      max-width: 100px;
+      &inner{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+
+      }
+
+      .arrow {
+        padding-left: 50px;
+      }
     }
 
     img {
       width: 30px;
     }
   }
-  &__item--red{
+  &__item--red {
     color: red;
-    &live{
-      color: white ;
-      //z-index: -1;
-      
+    &live {
+      z-index: 1;
 
       -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
@@ -191,13 +201,12 @@ a {
       order: 2;
       position: relative;
       top: 0;
-      
-      &::after{
-        background: red;
-      
+
+      &::before {
+        background-color: red;
         border-radius: 4px;
         bottom: 0;
-        content: "";
+        content: "Live Now";
         display: block;
         height: 21px;
         position: absolute;
@@ -220,14 +229,11 @@ a {
         font-style: italic;
         font-weight: 700;
         line-height: 21px;
-        //padding: 0 0.75em;
+        padding: 0 0.2rem;
         text-transform: uppercase;
-
       }
-      
-
     }
-    &bold{
+    &bold {
       font-weight: bold;
       font-size: 20px;
     }
@@ -243,27 +249,51 @@ a {
     flex-direction: row;
     //width: 100%;
 
-    &__title{
+    &__title {
       width: 300px;
     }
 
-    &__options{
+    &__options {
       //width: 100%;
-
     }
-    &__item{
-      width: 400px !important;
+    &__item {
+      min-width: 200px;
       background-color: white;
     }
-    
   }
 
-  .league__menu {
-    flex-direction: row;
-    justify-content: space-around;
-
-    &item {
+  .league {
+    &__menu {
       flex-direction: row;
+      justify-content: space-around;
+
+      &item {
+        flex-direction: row;
+      }
+    }
+    &__item{
+      padding: 15px 20px 15px 50px;
+      
+
+      &home{
+        max-width: 100%;
+        flex-direction: row;
+        &text{
+          padding: 10px;
+        }
+        
+      }
+
+      &away{
+        max-width: 100%;
+        &inner{
+          flex-direction: row;
+          
+        }
+        &text{
+          padding: 10px;
+        }
+      }
     }
   }
 }
