--- a/css/global.scss
+++ b/css/global.scss
@@ -8,6 +8,16 @@
     url(../fonts/regular.woff) format('woff');
 }
 
+// @font-face {
+//   font-family: Montitalic;
+//   font-style: italic;
+//   font-weight: 600;
+//   font-stretch: normal;
+//   font-display: swap;
+//   src: url(../fonts/regularitalic.woff2) format('woff2'),
+//     url(../fonts/regularitalic.woff) format('woff');
+// }
+
 @font-face {
   font-family: Mont;
   font-style: italic;
@@ -31,6 +41,16 @@
 @font-face {
   font-family: Mont;
   font-style: italic;
+  font-weight: 600;
+  font-stretch: normal;
+  font-display: swap;
+  src: url(../fonts/semibold.woff2) format('woff2'),
+    url(../fonts/semibold.woff) format('woff');
+}
+
+@font-face {
+  font-family: Mont;
+  font-style: bold;
   font-weight: 900;
   font-stretch: normal;
   font-display: swap;
@@ -38,14 +58,13 @@
     url(../fonts/heavyitalic.woff) format('woff');
 }
 
-
-@font-face {
-  font-family: Icons;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/l1icons-2022.woff2) format("woff2"),
-  url(../fonts/l1icons-2022.woff) format("woff");
-}
+// @font-face {
+//   font-family: Icons;
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url(../fonts/l1icons-2022.woff2) format('woff2'),
+//     url(../fonts/l1icons-2022.woff) format('woff');
+// }
 
 /*
 .ico-fussball{
@@ -67,8 +86,9 @@
 }
 */
 
-
-*, ::after, ::before {
+*,
+::after,
+::before {
   box-sizing: border-box;
 }
 
@@ -78,13 +98,18 @@ h2 {
   font-size: 35px;
 }
 
-
 html,
 body {
   margin: auto;
-  padding: 0 0.5rem ;
+  padding: 0 0.5rem;
   height: 100%;
   width: 100%;
   background-color: #eff0f0;
   font-family: Mont, Arial, sans-serif;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.notbold {
+  font-weight: normal;
 }
