--- a/css/page2.css
+++ b/css/page2.css
@@ -116,8 +116,8 @@ a {
   color: white;
 }
 .league__menu img {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
 }
 .league__menuitem {
   display: flex;
@@ -171,12 +171,13 @@ a {
   order: 2;
   position: relative;
   top: 0;
+  min-width: 71px;
 }
 .league__item--redlive::before {
   background-color: red;
   border-radius: 4px;
   bottom: 0;
-  content: "Live Now";
+  content: "Now Live";
   display: block;
   height: 21px;
   position: absolute;
@@ -184,7 +185,7 @@ a {
   top: 0;
   transform: skewX(-8deg);
   transform-origin: bottom right;
-  width: 100%;
+  min-width: 100%;
   align-items: center;
   color: #fff;
   display: flex;
@@ -196,11 +197,34 @@ a {
   text-transform: uppercase;
 }
 .league__item--redbold {
+  font-weight: 900;
+  font-size: 40px;
+}
+.league__item--greytill {
+  color: #909090;
+  font-size: 14px;
+  font-weight: 600;
+}
+.league__item--greybold {
+  font-size: 18px;
   font-weight: bold;
-  font-size: 20px;
+  padding: 13px;
+}
+.league__item--greytime {
+  font-size: 16px;
+  font-weight: 600;
+}
+.league__item--blacktill {
+  color: #909090;
+  font-size: 14px;
+  font-weight: 600;
+}
+.league__item--blackbold {
+  font-weight: 900;
+  font-size: 40px;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 660px) {
   .arrow {
     display: block;
   }
@@ -222,7 +246,7 @@ a {
     flex-direction: row;
   }
   .league__item {
-    padding: 15px 20px 15px 50px;
+    height: 130px;
   }
   .league__itemhome {
     max-width: 100%;
