--- a/css/page2.scss
+++ b/css/page2.scss
@@ -91,12 +91,93 @@ a {
   &__item {
     border-radius: 4px;
     background-color: #ffffff;
-    width: 300px;
-    height: 67px;
+    min-width: 230px;
+    min-height: 80px;
     // padding: 15px 0;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    
+    &content{
+      flex-direction: column;
+      align-items: center;
+      display: flex;
+      color: black;
+    }
+
+    img{
+      width: 20px;
+      height: 20px;
+    }
+    
+    
+  }
+  &--smallred {
+    color: red;
+    &live {
+      z-index: 1;
+      -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+      margin-right: 4px;
+      order: 2;
+      position: relative;
+      top: 0;
+      min-width: 35px;
+
+      &::before {
+        background-color: red;
+        border-radius: 4px;
+        bottom: 0;
+        content: 'Live';
+        display: block;
+        height: 21px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        -webkit-transform: skewX(-8deg);
+        transform: skewX(-8deg);
+        -webkit-transform-origin: bottom right;
+        transform-origin: bottom right;
+        min-width: 100%;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        color: #fff;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        font-size: 13px;
+        font-style: italic;
+        font-weight: 700;
+        line-height: 21px;
+        padding: 0 0.2rem;
+        text-transform: uppercase;
+      }
+    }
+    &bold {
+      font-weight: 900;
+      font-size: 20px;
+      text-align: center;
+    }
+    &thin{
+      font-size: 16px;
+      font-weight: 600;
+    }
+  }
+  &--smallgrey {
+    text-align: center;
+    &bold {
+      font-size: 15px;
+      font-weight: bold;
+      //padding: 5px;
+      color: black;
+    }
+
+    &time {
+      font-size: 13px;
+      font-weight: 600;
+      color: #909090;
+    }
   }
 }
 
@@ -147,6 +228,8 @@ a {
       &text {
         padding-left: 10px;
       }
+
+     
     }
   }
 
@@ -236,6 +319,10 @@ a {
         font-weight: 900;
         font-size: 40px;
       }
+      &thin{
+        font-size: 16px;
+        font-weight: 600;
+      }
     }
 
     &--grey {
@@ -268,8 +355,13 @@ a {
         font-weight: 900;
         font-size: 40px;
       }
+      &thin{
+        font-size: 16px;
+        font-weight: 600;
+      }
     }
   }
+
 }
 
 @media only screen and (min-width: 660px) {
