--- a/css/page2.scss
+++ b/css/page2.scss
@@ -67,6 +67,7 @@ a {
     color: #ffffff;
     border-radius: 4px;
     // padding: 15px 0;
+    
     width: 100%;
     height: 67px;
     display: flex;
@@ -372,16 +373,18 @@ a {
   .match-picker {
     flex-direction: row;
     //width: 100%;
-
+    
     &__title {
-      width: 300px;
+      height: 90px;
+      max-width: 330px;;
     }
 
     &__options {
       //width: 100%;
+      //min-width: 400px;
     }
     &__item {
-      min-width: 200px;
+      min-width: 280px;
       background-color: white;
     }
   }
