--- a/css/page2.scss
+++ b/css/page2.scss
@@ -110,7 +110,9 @@ a {
       width: 20px;
       height: 20px;
     }
-    
+    &:hover {
+      background-color: #eff0f0;
+    }
     
   }
   &--smallred {
@@ -223,14 +225,19 @@ a {
     &item {
       display: flex;
       align-items: center;
+      justify-content: center;
       flex-direction: row;
-      padding: 5px 30px;
-
+      padding: 10px 30px;
+      width: 100%;
+      
+      &:hover {
+        background-color: black;
+        width: 100%;
+      }
       &text {
         padding-left: 10px;
       }
-
-     
+      
     }
   }
 
@@ -266,10 +273,14 @@ a {
       .arrow {
         padding-left: 50px;
       }
+      
     }
 
     img {
       width: 30px;
+    }
+    &:hover {
+      background-color: #eff0f0;
     }
   }
   &__item {
@@ -419,6 +430,7 @@ a {
           padding: 10px;
         }
       }
+
     }
   }
 }
