--- a/css/page2.scss
+++ b/css/page2.scss
@@ -276,7 +276,7 @@ a {
       }
 
       .arrow {
-        padding-left: 50px;
+        padding-left: 30px;
       }
       
     }
@@ -384,6 +384,7 @@ a {
 @media only screen and (min-width: 660px) {
   .arrow {
     display: block;
+    font-size: 50px;
   }
 
   .match-picker {
