--- a/css/page3.css
+++ b/css/page3.css
@@ -110,22 +110,21 @@ a {
   color: red;
 }
 .match-picker--smallredlive {
-  z-index: 1;
-  -webkit-box-ordinal-group: 3;
-  -ms-flex-order: 2;
-  margin-right: 4px;
   order: 2;
   position: relative;
   top: 0;
-  min-width: 35px;
+  height: 21px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
 }
 .match-picker--smallredlive::before {
   background-color: red;
   border-radius: 4px;
   bottom: 0;
-  content: "Live";
+  content: "";
   display: block;
-  height: 21px;
   position: absolute;
   right: 0;
   top: 0;
@@ -140,7 +139,12 @@ a {
   font-weight: 700;
   line-height: 21px;
   padding: 0 0.2rem;
-  text-transform: uppercase;
+}
+.match-picker--smallredlivespan {
+  position: relative;
+  display: flex;
+  color: white;
+  font-size: 12px;
 }
 .match-picker--smallredbold {
   font-weight: 900;
@@ -209,15 +213,18 @@ a {
   order: 2;
   position: relative;
   top: 0;
-  max-width: 30px;
+  height: 21px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
 }
 .league__title .picked-match--smallredlive::before {
   background-color: red;
   border-radius: 4px;
   bottom: 0;
-  content: "Live";
+  content: "";
   display: block;
-  height: 21px;
   position: absolute;
   right: 0;
   top: 0;
@@ -232,7 +239,10 @@ a {
   font-weight: 700;
   line-height: 21px;
   padding: 0 0.3rem;
-  text-transform: uppercase;
+}
+.league__title .picked-match--smallredlivespan {
+  position: relative;
+  display: flex;
 }
 .league__title .picked-match--smallredbold {
   font-weight: 900;
@@ -319,6 +329,7 @@ a {
 
 .info__gameplace {
   background-color: white;
+  margin: 15px 0;
 }
 .info__gameplacetitle {
   font-size: 18px;
@@ -333,6 +344,10 @@ a {
 .info__gameplacecontent img {
   width: 300px;
   height: 300px;
+}
+.info__box {
+  margin: 15px 0;
+  background-color: white;
 }
 
 @media only screen and (min-width: 660px) {
@@ -359,5 +374,20 @@ a {
   }
   .league__menuitemred {
     border-bottom: 6px solid red;
+  }
+  .info {
+    border: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-column-gap: 20px;
+  }
+  .info__gameplace {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  .info__box:nth-child(1) {
+    grid-row: 2/3;
+    grid-column: 1/2;
   }
 }/*# sourceMappingURL=page3.css.map */
