--- a/css/page3.scss
+++ b/css/page3.scss
@@ -117,22 +117,25 @@ a {
   &--smallred {
     color: red;
     &live {
-      z-index: 1;
       -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
-      margin-right: 4px;
       order: 2;
       position: relative;
       top: 0;
-      min-width: 35px;
+      height: 21px;
+      justify-content: center;
+      display: flex;
+      align-items: center;
+      text-transform: uppercase;
+      //text-align: center;
+      //align-content: center;
 
       &::before {
         background-color: red;
         border-radius: 4px;
         bottom: 0;
-        content: 'Live';
+        content: '';
         display: block;
-        height: 21px;
         position: absolute;
         right: 0;
         top: 0;
@@ -153,7 +156,12 @@ a {
         font-weight: 700;
         line-height: 21px;
         padding: 0 0.2rem;
-        text-transform: uppercase;
+      }
+      &span{
+        position: relative;
+        display: flex;
+        color: white;
+        font-size: 12px;
       }
     }
     &bold {
@@ -238,19 +246,21 @@ a {
         &live {
           -webkit-box-ordinal-group: 3;
           -ms-flex-order: 2;
-          //margin-right: 4px;
           order: 2;
           position: relative;
           top: 0;
-          max-width: 30px;
+          height: 21px;
+          justify-content: center;
+          display: flex;
+          align-items: center;
+          text-transform: uppercase;
 
           &::before {
             background-color: red;
             border-radius: 4px;
             bottom: 0;
-            content: 'Live';
+            content: '';
             display: block;
-            height: 21px;
             position: absolute;
             right: 0;
             top: 0;
@@ -271,7 +281,10 @@ a {
             font-weight: 700;
             line-height: 21px;
             padding: 0 0.3rem;
-            text-transform: uppercase;
+          }
+          &span{
+            position: relative;
+            display: flex;
           }
         }
         &bold {
@@ -377,8 +390,13 @@ a {
 }
 
 .info {
+
+
   &__gameplace {
     background-color: white;
+    margin: 15px 0;
+    
+    
 
     &title {
       font-size: 18px;
@@ -390,12 +408,18 @@ a {
 
     &content {
       font-weight: 400;
+      
 
       img {
         width: 300px;
         height: 300px;
       }
     }
+    
+  }
+  &__box{
+    margin: 15px 0;
+    background-color: white;
   }
 }
 
@@ -436,4 +460,29 @@ a {
       }
     }
   }
+
+  .info {
+    border: solid;
+    display: grid;
+      //grid-template-columns: repeat(2, 1fr);
+      //grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr ;
+      
+    grid-column-gap: 20px;
+  
+    &__gameplace {
+      grid-column: 1/2;
+      grid-row: 1/3;
+      
+    }
+    &__box:nth-child(1){
+      grid-row: 2/3;
+      grid-column: 1/2;
+
+    }
+
+
+  }
+
 }
