Center previous items

--- a/css/page3.css
+++ b/css/page3.css
@@ -393,6 +393,7 @@ a {
   display: flex;
   justify-content: space-around;
   padding: 15px;
+  align-items: center;
 }
 .previous__item:nth-child(odd) {
   background-color: #eff0f0;
